--- a/clint_2/index.html
+++ b/clint_2/index.html
@@ -3,12 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Client 2</title>
-    <style>
-        body { font-family: sans-serif; padding: 20px; }
-        textarea { width: 100%; height: 120px; margin-top: 10px; }
-        button { padding: 10px 15px; margin-top: 10px; }
-        .box { margin-bottom: 20px; }
-    </style>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
