--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cyber Chat</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
 </head>
 <body>
     <div id="home-page">
@@ -33,19 +36,21 @@
 
     <div id="chat-page" class="hidden">
         <div class="chat-container">
-            <div class="chat-header">
-                <h2>Cyber Chat</h2>
-                <div class="members-panel">
-                    <h3>Members</h3>
-                    <ul id="members-list"></ul>
+            <div class="members-panel">
+                <h3>Members</h3>
+                <ul id="members-list"></ul>
+            </div>
+            <div class="chat-area">
+                <div class="chat-header">
+                    <h2>Cyber Chat</h2>
                 </div>
-            </div>
-            <div class="chat-messages">
-                <!-- Messages will be appended here -->
-            </div>
-            <div class="chat-input">
-                <input type="text" id="message-input" placeholder="Type a message...">
-                <button id="send-btn">Send</button>
+                <div class="chat-messages">
+                    <!-- Messages will be appended here -->
+                </div>
+                <div class="chat-input">
+                    <input type="text" id="message-input" placeholder="Type a message...">
+                    <button id="send-btn">Send</button>
+                </div>
             </div>
         </div>
     </div>
