style: Update body class to align content to start and add top padding.

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 
-<body class="h-screen w-screen overflow-hidden flex items-center justify-center bg-[#2c3e50]">
+<body class="h-screen w-screen overflow-hidden flex items-start justify-center bg-[#2c3e50] pt-5">
 
     <!-- APP SHELL -->
     <div id="app"
